test/functions/jturner/first-class-generic-function.good
first-class-generic-function.chpl:329: In function 'main':
first-class-generic-function.chpl:389: error: the proc 'scalar_outer_product_cholesky' is generic and cannot be captured
first-class-generic-function.chpl:329: In function 'main':
first-class-generic-function.chpl:416: error: illegal access of procedure
